K8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clothing-store-ingress
  namespace: final-project
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: final.project.com    # غيّر هذا لاسم الدومين الفعلي لديك
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 5001
